--- a/src/layouts/styles.css
+++ b/src/layouts/styles.css
@@ -17,7 +17,7 @@
 
 .scorecard-ranking {
     display:inline-block; 
-    margin-bottom: 3vmax;
+    margin-bottom: 2vmax;
 }
 
 .scorecard-ranking-number {
@@ -31,15 +31,36 @@
     font-size: 2vmax;
     width:42.5%;
     position:absolute;
-    margin-top:-2.5vmax;
+    margin-top:-1.5vmax;
     margin-left: 5vmax;
     font-weight:700;
     border-bottom:2px solid #333;
 }
 
 .scorecard-ranking-subheader {
-    font-size: 1vmax;
+    font-size: 1.5vmax;
     font-weight:200;
     margin-left: 5vmax;
     margin-top:1.5vmax;
+}
+/* Body */
+.scorecard-content-container {
+    padding-left: 5%;
+    padding-right:5%;
+}
+
+.scorecard-content-left ol li{
+    font-size:1.5vmax;
+}
+
+.scorecard-content-right {
+    text-align:right;
+    position: absolute;
+    right:25%;
+    margin-top:-5vmax;
+}
+
+.scorecard-content-score {
+    font-size: 5vmax;
+    font-weight: 700;
 }
